[workspace]
resolver = "3"
members = [
    "packages/core",
    "packages/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
veilid-core = "0.5.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
overflow-checks = true
